--- a/src/style.css
+++ b/src/style.css
@@ -26,11 +26,6 @@ body {
 
 }
 
-.container {
-    max-width: 120rem;
-    margin: 8rem auto;
-    background: #ffff;
-}
 
 
 
@@ -38,6 +33,8 @@ body {
 
 .content {
     display: flex;
+    width: 134rem;
+    background: #ffff;
     
 
    
@@ -45,7 +42,7 @@ body {
 
 .navbar {
     background-color: #0A0952;
-    flex: 0 0 18%;
+    flex: 0 0 10%;
     height: 90rem;
 
 }
@@ -116,10 +113,9 @@ hr {
     height: 0;
     width: 18%;
     top: 70%;
-    left: 0;
     border: 1px solid #EFEFEF;
     margin-top: 3rem;
-    margin-left: 10rem;
+    margin-left: 4rem;
     top: 558px;
     
     
@@ -282,6 +278,7 @@ hr {
     display: flex;
     justify-content: space-between;
     margin-top: -5rem;
+    
 }
 
 .service-box-1 {
@@ -464,4 +461,274 @@ caption {
 }
 
 
+.wallet-text {
+    font-family: 'Zilla Slab';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 43px;
+    color: #000000;
+}
+
+.wallet-p {
+    font-family: 'Libre Franklin';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #5C5E5E;
+}
+
+.wallet-balance {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.wallet-balance-1 {
+    background: #FFFFFF;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 15.4819px;
+    width: 45rem;
+    height: 18rem;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.wallet-balance-view {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 25rem;
+
+}
+
+.wallet-balance-2 {
+    width: 45rem;
+    height: 18rem;
+    background: #0A0952;
+    border: 0.75px solid rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    border-radius: 15.4819px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.wallet-btn {
+    width: 13rem;
+    height: 5rem;
+    background: #FFFFFF;
+    border-radius: 8px;
+
+}
+
+.text-container {
+    margin-bottom: 2.5rem;
+}
+
+.wallet-fund {
+    margin-right: 25rem;
+    width: 15rem;
+    height: 4rem;
+    font-family: 'Zilla Slab';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 58px;
+
+
+   color: #31394D;
+
+}
+
+.balance-icon {
+    margin-left: 2rem;
+}
+.wallet-detail {
+    
+    font-family: 'Libre Franklin';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    color: #A9A9B8;
+    margin-bottom: 1rem;
+
+
+}
+.wallet-bank {
+
+    font-family: 'Zilla Slab';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 27px;
+    margin-bottom: 1rem;
+    color: #FFFFFF;
+
+
+}
+
+.wallet-account-number {
+    font-family: 'Libre Franklin';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 21px;
+    color: #A9A9B8;
+    margin-bottom: 1rem;
+
+}
+
+.search {
+    
+    flex: 0 0 100%;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    
+
+}
+
+.search-bar {
+    
+   
+}
+
+.search-input {
+    font-family: 'Libre Franklin';
+    font-size: 18px;
+    color: #C4C4C4;
+    border: none;
+    width: 100%;
+    margin-right: -3rem;
+    background-color: rgba(242, 242, 242, 0.9);
+    padding: .7rem 2rem;
+
+}
+
+.search-input:focus {
+    outline: none;
+}
+
+.search-icon {
+    width: 2rem;
+    height: 2rem;
+}
+
+
+.icon-button {
+    border: none;
+    background-color: rgba(242, 242, 242, 0.9);
+
+}
+.icon-button:focus {
+    outline: none;
+}
+
+.search-text {
+    font-family: 'Zilla Slab';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 58px;
+    color: #31394D;
+    margin-bottom: 3rem;
+
+}
+
+.bills-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5rem;
+
+}
+
+.bills-icon-1 {
+    margin-top: 4rem;
+    margin-left: 3rem;
+    border-radius: 700%;
+    background: #F7E4E1;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.bills-icon-2 {
+    margin-top: 4rem;
+    margin-left: 3rem;
+    border-radius: 700%;
+    background: #E6E6F3;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    
+
+}
+
+.bills-icon-3 {
+    margin-top: 4rem;
+    margin-left: 3rem;
+    border-radius: 700%;
+    background: #DBFFE1;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    
+    
+}
+
+.bills-icon-4 {
+    margin-top: 4rem;
+    margin-left: 3rem;
+    border-radius: 700%;
+    background: #FCEAFC;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    
+    
+}
+
+
+.bills-svg {
+    margin-top: 0.5rem;
+
+}
+
+.bills-text {
+    margin-bottom: 4rem;
+    margin-left: 3rem;
+    font-family: 'Libre Franklin';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px
+
+}
+
+.bills-box {
+   width: 20.5rem;
+   height: 14rem;
+   background: #FFFFFF;
+   border-radius: 15.4819px;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   align-items: flex-start;
+
+}
 
